Fix horizontal scroll on report detail page

--- a/website/assets/styles/css/index.css
+++ b/website/assets/styles/css/index.css
@@ -392,7 +392,6 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   font-size: 30px;
   color: var(--text-color);
 }
